# PcPriceAnchor

./: .claudeignore  .env.example  .gitignore  Architecture_Plan.md  CLAUDE.md  alembic.ini  docker-compose.yml  pyproject.toml  test_chrome_cdp.py  test_item_price.py
config/: brand_aliases.yml  brand_tiers.yml
docs/: cdp_crawler_solution.md  jd_anti_scraping_blocker.md
price_monitor/: main.py
price_monitor/analysis/: report.py  trend.py  value_rank.py
price_monitor/cleaners/: base.py  normalizer.py  ram.py  schemas.py
price_monitor/config/: settings.py
price_monitor/crawlers/: base.py  schemas.py
price_monitor/crawlers/jd/: cdp_crawler.py  detail.py  playwright_search.py  search.py  stealth_crawler.py
price_monitor/db/: session.py
price_monitor/db/migrations/: env.py  script.py.mako
price_monitor/db/migrations/versions/: 001_initial_schema.py  002_fix_timezone_and_refresh_policy.py
price_monitor/models/: __init__.py  platform.py  price_tick.py  product.py  ram_spec.py
price_monitor/scheduler/: tasks.py
price_monitor/storage/: base.py  price_repo.py  product_repo.py
price_monitor/templates/: report.html
scripts/: daily_crawl.sh  start_chrome.sh
tests/analysis/: test_analysis.py
tests/cleaners/: test_ram_cleaner.py
tests/crawlers/: test_jd_search.py
