[project]
name = "price-monitor"
version = "0.1.0"
description = "电商价格监控系统 — 多平台硬件价格采集、清洗、趋势分析"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "pyyaml>=6.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.setuptools.packages.find]
include = ["price_monitor*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
